# MyCuda

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/Monkey/include/Monkey/: Monkey.h
src/Monkey/src/: Monkey.cpp
